[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Implemented a deep learning-based image compression system using discretized Gaussian Mixture Models for precise entropy estimation and attention modules to improve visual quality. Achieves state-of-the-art compression performance with fewer bits and better image reconstruction, matching or outperforming standards like JPEG, JPEG2000, HEVC, and even VVC in PSNR and MS-SSIM."
authors = [
  { name = "Jay Yadav and Dr. Mohammad Rafi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


